# cursor_dev

./: .clinerules  .cursorrules  .cursorrules.yml  .flake8  .gitignore  .mcp.json  A2A_PROTOTYPE_USAGE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_SIMPLE.md  CLAUDE_navigation_update.md  Dockerfile  METHODOLOGY.md  Makefile  README.md  article_review_assessment.md  article_review_report.md  article_review_results.md  article_structure_design.md  checklist_note_article_creation.md  claude_code_knowledge_management_note_article.md  cognee_core_patterns.md  command_templates_cognee.md  competitive_ai_coordination_article.md  competitive_ai_coordination_practical_examples.md  competitive_ai_coordination_strategic_integration.md  compose.override.yml  crontab  cursor_dev.code-workspace  essential_patterns_cognee.md  extracted_knowledge_cognee.md  integrated_article_introduction_hook.md  memory-bank_consolidation_analysis_report.md  note-article-integrated.md  note_article_checklist.md  note_article_creation_checklist.md  note_article_draft.md  note_article_knowledge_management.md  note_article_structure.md  note_article_tmux_organization_competition.md  (+18 more)
app/ams/: Dockerfile  README.md  SESSION_STATE.md  docker-compose.yml  pyproject.toml  test_workflow_fix.py  unit_pytest_output.txt
app/ams/.claude/: session_notes.md
app/ams/checklists/: AMS_test_review_and_execution_checklist_20250817.md  aggregator_agent_detailed_design.md  aggregator_reporter_implementation_summary.md  agile_implementation_checklist.md  ams_agent_execution_review_checklist.md  ams_mvp_simplification_checklist_20250818.md  black_formatting_error_analysis_20250801.md  complete_mypy_fix_checklist_20250801.md  detailed_review_criteria.md  event_bus_detailed_design.md  flake8_remaining_errors_fix_20250801.md  improvement_recommendations.md  integration_detailed_design.md  linter_fix_checklist_20250801.md  llm_integration_checklist.md  mypy_type_error_analysis_20250801_v2.md  persona_evaluation_agent_detailed_design.md  poetry_group_error_analysis_20250801.md  pr80_ci_fix_checklist_20250820.md  pydantic_settings_error_dag_checklist.md  reporter_agent_detailed_design.md  review_executive_summary.md  review_strategy_checklist.md  ruff_command_not_found_analysis_20250801.md  ruff_e501_line_length_error_20250801.md  simulation_clock_detailed_design.md  skip_test_fix_checklist.md  skipped_test_dag_analysis.md  test_error_analysis_checklist.md  test_execution_report_20250803.md  test_fix_summary_20250801.md  test_reorganization_checklist.md  test_review_results.md  timeout_fix_implementation_report.md  timeout_root_cause_dag_analysis.md  ui_implementation_checklist_20250804.md
app/ams/docs/: AMS_TEST_COMPLETION_STATUS.md  DAG_DEBUGGER_CONTINUATION_REPORT.md  DAG_DEBUGGER_FINAL_REPORT.md  ams_development_status_20250801.md  ams_development_status_summary_20250127.md  ams_implementation_fixes_report.md  ams_mvp_detailed_design_20250818.md  ams_progress_report_20250803.md  ams_requirements_and_basic_design_review_20250818.md  ams_test_execution_report.md  ams_test_review_action_items.md  ams_test_review_critical_issues_report.md  code_review_20250818.md  current_task_status_20250123.md  dag_debugger_technical_debt_analysis.md  deployment_guide.md  event_loop_issue_workaround.md  final_test_status_report.md  llm_verification_guide.md  llm_verification_test_results.md  note.md  permanent_solutions_for_technical_debt.md  technical_debt_resolution_final.md  test_error_root_cause_analysis.md  test_execution_summary.md  test_failure_final_diagnosis.md  test_failure_resolution_summary.md  testing_guide.md  timeout_configuration.md  timeout_vs_prompt_optimization_analysis.md
app/ams/examples/: manual_api_integration.py  test_api_integration.py  test_api_integration_pytest.py
app/ams/frontend/: .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
app/ams/frontend/src/: App.tsx
app/ams/frontend/src/components/: Layout.tsx
app/ams/frontend/src/services/: api.ts
app/ams/patches/: fix_deep_context_analyzer.patch  fix_skip_test_timeout.patch  fix_xfail_tests.patch
app/ams/progress/: ams_project_final_status_report_20250804.md  ams_project_unified_status_20250804.md  ams_simulation_stall_diagnosis_report_20250804.md  ams_ui_implementation_completion_report_20250804.md  next_session_quickstart.md  phase4_knowledge_recording_summary_20250803.md  session_20250803_progress.md  session_20250803_test_improvements.md  test_improvement_summary_20250803.md  ui_implementation_phase1_20250804.md
app/ams/scripts/: continue_session.sh  run_integration_test.sh  start_dev_servers.sh  test_llm_connection.py  test_llm_simple.py  test_single_component.py  test_small_integration.py
app/ams/src/: __init__.py
app/ams/src/agents/: __init__.py  aggregator.py  analyzer.py  deep_context_analyzer.py  evaluator.py  network_effect_simulator.py  orchestrator.py  persona_design_orchestrator.py  persona_generator.py  persona_generator_optimized.py  persona_generator_original.py  population_architect.py  population_architect_optimized.py  population_architect_original.py  reporter.py  target_audience_analyzer.py
app/ams/src/config/: __init__.py  config.py  llm_selector.py
app/ams/src/core/: __init__.py  base.py  interfaces.py  types.py
app/ams/src/server/: app.py  app_types.py  simulation_service.py
app/ams/src/utils/: __init__.py  async_llm_manager.py  json_parser.py  llm_factory.py  llm_transparency.py
app/ams/tests/: __init__.py  conftest.py  llm_test_helper.py
app/ams/tests/integration/: conftest.py  test_llm_cleanup.py  test_llm_connection.py  test_orchestrator_integration.py  test_small_scale_integration.py
app/ams/tests/unit/: test_aggregator.py  test_analysis_checklist.md  test_analyzer.py  test_config.py  test_core_interfaces.py  test_deep_context_analyzer.py  test_json_parser.py  test_llm_transparency.py  test_network_effect_simulator.py  test_persona_design_orchestrator.py  test_persona_evaluation_agent.py  test_persona_generator.py  test_population_architect.py  test_reporter.py  test_target_audience_analyzer.py
(+1081 files in other folders)
