[tool.poetry]
name = "article-market-simulator"
version = "0.1.0"
description = "Article Market Simulator - Dynamic multi-agent evaluation system"
authors = ["AMS Team <ams@example.com>"]
readme = "README.md"
packages = [{include = "src"}]
keywords = ["multi-agent", "simulation", "article-evaluation", "langgraph"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langgraph = ">=0.2.46"
langchain = ">=0.3.0"
langchain-google-genai = ">=2.0.0"
langchain-openai = ">=0.2.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
aiohttp = ">=3.9.0"
websockets = ">=12.0"
uvicorn = ">=0.30.0"
fastapi = ">=0.115.0"
python-multipart = ">=0.0.9"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.13.0"
networkx = ">=3.1"
python-dotenv = ">=1.0.0"
structlog = ">=24.0.0"
rich = ">=13.7.0"
typer = ">=0.12.0"
httpx = ">=0.27.0"
tenacity = ">=8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=5.0.0"
pytest-mock = ">=3.12.0"
black = ">=24.0.0"
ruff = ">=0.3.0"
mypy = ">=1.8.0"
types-aiofiles = "*"
ipykernel = ">=6.29.0"
jupyter = ">=1.0.0"
flake8 = ">=7.3.0,<8.0.0"
isort = ">=6.0.1,<7.0.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=5.0.0"
pytest-timeout = ">=2.2.0"
pytest-xdist = ">=3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--asyncio-mode=auto",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
    "llm: Tests requiring LLM API calls",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true